# sitg-qgis-plugin

./: .gitignore  .pre-commit-config.yaml  .qgis-plugin-ci  README.md  pyproject.toml  ruff.toml
.github/workflows/: code-quality.yaml  precommit.yaml  release.yaml
qsitg/: README.html  README.txt  __init__.py  config.py  metadata.txt  qsitg.py  qsitg_dialog.py  qsitg_dialog_base.ui  resources.py  resources.qrc
